GH-10622: `GrpcOutboundGateway` cleanup
Fixes: https://github.com/spring-projects/spring-integration/issues/10622

* Mostly cosmetic refactoring of docs and Javadocs wording,
methods and their arguments reordering for consistency.
Remove unnecessary `@SuppressWarnings`, and some utility methods
* Use `StepVerifier` in the test instead of `block()` on reactive types
* Use `new GenericMessage()` for simple messages